--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,18 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+  - images/Rectangle_13.png
+  - images/Rectangle_13(1).png
+  - images/Rectangle_13(2).png
+  - images/Rectangle_13(3).png
+  - images/Rectangle_13(4).png
+  - images/Rectangle_13(5).png
   - images/Rectangle_99.png
+  - images/xuehao.png
+  - images/name.png
+  - images/zhuanye.png
+  - images/typing.png
+  - images/phone.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
