--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=D:/ASDK
-flutter.sdk=D:\\flutter1\\flutter
+sdk.dir=D:\\AndroidSDK
+flutter.sdk=D:\\fvm\\versions\\2.8.0
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
