--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ flutter:
   - images/zhuanye.png
   - images/typing.png
   - images/phone.png
+  - images/white.png
+  - images/bigwhite.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
