--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
-//        google()
+        google()
+        jcenter()
         mavenCentral()
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+//        maven { url 'https://maven.aliyun.com/repository/google' }
+//        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+//        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
     }
 
     dependencies {
@@ -16,11 +17,13 @@ buildscript {
 
 allprojects {
     repositories {
-//        google()
+        google()
+        jcenter()
         mavenCentral()
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+        maven { url "https://storage.googleapis.com/download.flutter.io" }
+//        maven { url 'https://maven.aliyun.com/repository/google' }
+//        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+//        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
     }
 }
 
