--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,21 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  http: ^0.13.5
+#  http_parser: ^3.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+#  cupertino_icons: ^1.0.2
+  connectivity_plus: ^2.3.7
   cupertino_icons: ^1.0.2
+
+  dio: ^4.0.6
+  dio_smart_retry: ^1.3.2
+
+  retry: ^3.1.0
+
+  shared_preferences: ^2.0.7
+
 
 dev_dependencies:
   flutter_test:
@@ -59,23 +70,29 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - images/Rectangle_13.png
-  - images/Rectangle_13(1).png
-  - images/Rectangle_13(2).png
-  - images/Rectangle_13(3).png
-  - images/Rectangle_13(4).png
-  - images/Rectangle_13(5).png
-  - images/Rectangle_99.png
-  - images/xuehao.png
-  - images/name.png
-  - images/zhuanye.png
-  - images/typing.png
-  - images/phone.png
-  - images/white.png
-  - images/bigwhite.png
-  - images/img_1.png
-  - images/img_2.png
-  - images/img_3.png
+    - images/Rectangle_13.png
+    - images/Rectangle_13(1).png
+    - images/Rectangle_13(2).png
+    - images/Rectangle_13(3).png
+    - images/Rectangle_13(4).png
+    - images/Rectangle_13(5).png
+    - images/Rectangle_99.png
+    - images/xuehao.png
+    - images/name.png
+    - images/zhuanye.png
+    - images/typing.png
+    - images/phone.png
+    - images/white.png
+    - images/bigwhite.png
+    - images/img_1.png
+    - images/img_2.png
+    - images/img_3.png
+    - images/chatnews.png
+    - images/chatapply.png
+    - images/mycornerjoined.png
+    - images/mycornercreated.png
+    - images/cornermade.png
+    - images/cornerreceived.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
