--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ flutter:
     - images/mycornercreated.png
     - images/cornermade.png
     - images/cornerreceived.png
+    - images/lunbo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
